--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Dancer-Session-Storable
 
+0.04    2011-03-29
+        Use $class->session_name to retrieve the session, for a safe default
+        session name if sessin_name hasn't been configured.  Thanks to alexrj.
+
 0.03    2011-03-25
         Use the session_name (e.g. dancer.session, or the value of the
         session_name config setting) for the session filename.  NOTE: this is
